# emulators

1_chip8/: CMakeLists.txt  README.md  chip8.cpp  chip8.h  main.cpp  platform.cpp  platform.h
